# RUST-TD-2025

./: .gitignore  Cargo.toml  README.md  TD1.md  TD2.md  report.html
loglyzer/: Cargo.toml
loglyzer/src/: main.rs
td01-basics/: Cargo.toml  schema.sql
td02-websocket/: Cargo.toml  dashboard.html
td02-websocket/src/: main.rs
