[package]
name = "loglyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
glob = "0.3"
regex = "1.11"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
axum = "0.7"
tower = "0.4"
tokio-stream = "0.1"
futures = "0.3"
tokio-util = "0.7"
