[package]
name = "td01-basics"
version = "0.1.0"
edition = "2021"

[dependencies]
# demandés par l'énoncé
tokio = { version = "1.47.1", features = ["full"] }
reqwest = { version = "0.12.23", features = ["json"] }

# pratiques pour le TD
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dotenvy = "0.15"
rand = "0.8"
chrono = "0.4.42"
dotenv = "0.15.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
