[package]
name = "td02-websocket"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
env_logger = "0.11"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
chrono = "0.4"
dotenvy = "0.15"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres"] }
